# aurora-mastering-engine

./: .cursorrules  .gitignore  BLUEPRINT-INDEX.md  PART-1.md  PART-2.md  PART-3.md  PART-4.md  PART-5.md  PART-6.md  PART-7.md  PART-8.md  PART-9.md  docker-compose.yml
.github/workflows/: ci.yml
aurora-dsp/: CMakeLists.txt  build_wasm.sh
aurora-dsp/include/aurora/: analog_residual.h  binaural.h  biquad.h  dynamic_eq.h  engine.h  lufs.h  multiband_compressor.h  psychoacoustic.h  riaa.h  spatial_renderer.h  transient_designer.h  true_peak.h
aurora-dsp/src/: analog_residual.cpp  binaural.cpp  bindings.cpp  biquad.cpp  dynamic_eq.cpp  engine.cpp  lufs.cpp  multiband_compressor.cpp  psychoacoustic.cpp  riaa.cpp  spatial_renderer.cpp  transient_designer.cpp  true_peak.cpp
aurora-dsp/tests/: test_lufs.cpp  test_main.cpp
aurora2/aurora-dsp/: CMakeLists.txt  build_wasm.sh
aurora2/aurora-dsp/include/aurora/: biquad.h  crossover.h  dither.h  engine.h  limiter.h  linear_phase_eq.h  lufs.h  ms_processing.h  saturation.h  true_peak.h
aurora2/aurora-dsp/src/: biquad.cpp  crossover.cpp  dither.cpp  engine.cpp  limiter.cpp  linear_phase_eq.cpp  lufs.cpp  ms_processing.cpp  saturation.cpp  true_peak.cpp
aurora2/aurora-dsp/tests/: test_acceptance.cpp  test_limiter.cpp  test_lufs.cpp  test_main.cpp  test_multiband.cpp  test_saturation.cpp  test_true_peak.cpp
aurora2/frontend/: package-lock.json
aurora2/frontend/src/: index.css
aurora2/frontend/src/components/: MasteringApp.tsx
aurora2/frontend/src/components/common/: LoadingSpinner.tsx  Toast.tsx
aurora2/frontend/src/components/controls/: LoudnessTarget.tsx  MacroKnob.tsx
aurora2/frontend/src/components/tabs/: AnalyzeTab.tsx  ColabTab.tsx  DynamicsTab.tsx  EQTab.tsx  LoudnessTab.tsx  ReferenceTab.tsx
aurora2/frontend/src/components/visualizers/: LUFSMeter.tsx  SpectrumAnalyzer.tsx  TruePeakMeter.tsx  WaveformDisplay.tsx
aurora2/frontend/src/contexts/: AuthContext.tsx  SessionContext.tsx  ThemeContext.tsx  ToastContext.tsx
aurora2/frontend/src/hooks/: useAudioEngine.ts  useSessionPersistence.ts
aurora2/frontend/src/stores/: audioStore.ts  processingStore.ts  sessionStore.ts
aurora2/frontend/src/utils/: api.ts  audio.ts  wasm-loader.ts
auroranet/: dataset.py  export.py  model.py  train.py
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_rls.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  middleware.py
backend/app/api/routes/: auth.py  billing.py  chat.py  collab_ws.py  render.py  sessions.py  upload.py  webhooks.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  feature_gates.py  observability.py  security.py
backend/app/models/: __init__.py  audio_file.py  base.py  collab_event.py  compliance_cert.py  enums.py  qc_report.py  render_job.py  session.py  subscription.py  user.py  version.py  waitlist.py
backend/app/schemas/: auth.py  common.py  render.py  session.py  user.py
backend/app/services/: __init__.py  analysis.py  billing.py  claude_service.py  codec_optimization.py  crud.py  ddex.py  forensics.py  inference.py  qc_engine.py  separation.py  spectral_repair.py  storage.py
backend/app/tasks/: __init__.py  render_tasks.py
backend/scripts/: init-db.sql
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_feature_gates.py  test_isolation.py  test_subscription.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker
docs/: README.md
frontend/: package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/worklets/: preview-processor.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuroraApp.tsx  MasteringApp.tsx
frontend/src/components/common/: Toast.tsx
frontend/src/components/visualizers/: WebGLSpectrum.tsx
frontend/src/contexts/: AuthContext.tsx  SessionContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/types/: aurora.ts
monitoring/: prometheus.yml
monitoring/grafana/provisioning/: dashboards.yml
nginx/: nginx.conf
scripts/: setup.sh  test.sh
tests/e2e/: conftest.py  test_full_workflow.py
